# TestVCPkg

./: Directory.Build.props  Directory.Build.targets  LICENSE  README.md  TestVCPkg.sln  install-vcpkg-solution.ps1  patch-vcpkg-solution.ps1  uninstall-vcpkg-solution.ps1  vcpkg.env-solution.props  vcpkg.json  vcpkg.json.txt
ClassicMode-Basic/: Classic.Build.props  ClassicMode-Basic.vcxproj  ClassicMode-Basic.vcxproj.filters  Directory.Build.targets  Function.h  install-vcpkg-classic.ps1  main.cpp  patch-vcpkg-classic.ps1  stdafx.h  uninstall-vcpkg-classic.ps1  with_openssl.cpp
Doc/: vcpkg-overview.md
ManifestMode-Overlay/: CMakeLists.txt  Directory.Build.props  Directory.Build.targets  Function.h  ManifestMode-Overlay.vcxproj  ManifestMode-Overlay.vcxproj.filters  install-vcpkg-overlay.ps1  main.cpp  patch-vcpkg-overlay.ps1  stdafx.cpp  uninstall-vcpkg-overlay.ps1  vcpkg-configuraion.json  vcpkg.env-overlay.props  vcpkg.json  with-zlib.cpp
ManifestMode-Overlay/overlays/ports/zlib/: portfile.cmake  vcpkg.json
ManifestMode-Overlay/overlays/triplets/: x64-windows-static-md.cmake  x64-windows-static-mt.cmake
ManifestMode-Project/: Directory.Build.props  Directory.Build.targets  Function.h  ManifestMode-Project.vcxproj  ManifestMode-Project.vcxproj.filters  install-vcpkg-project.ps1  main.cpp  patch-vcpkg-project.ps1  uninstall-vcpkg-project.ps1  vcpkg.env-project.props  vcpkg.json  with-zlib.cpp  with_curl.cpp
ManifestMode-Solution/: Directory.Build.props  Function.h  ManifestMode-Solution.vcxproj  ManifestMode-Solution.vcxproj.filters  main.cpp  with_boost.cpp
(+8 files in other folders)
